# deepLP

./: .gitignore  HowToRun.md  README.md  pyproject.toml  run_deeplp.bat  test_example.py
models/: example_1_time_only_pinn_500000_2025_03_04_out_dim_5.pt  example_2_time_only_pinn_500000_2025_03_05_out_dim_9.pt  example_3_time_only_pinn_500000_2025_03_05_out_dim_8.pt  example_4_time_only_pinn_500000_2025_03_05_out_dim_7.pt
saved_models/case_1/: example_1_time_only_rnn_10000_2025_03_14_loss.txt  example_1_time_only_rnn_10000_2025_03_14_mov.txt  example_1_time_only_rnn_10000_2025_03_14_out_dim_19.pt  example_2_time_only_rnn_10000_2025_03_14_loss.txt  example_2_time_only_rnn_10000_2025_03_14_mov.txt  example_2_time_only_rnn_10000_2025_03_14_out_dim_9.pt
src/deeplp/: __init__.py  hello.py  main.py  models.py  ode.py  problems.py  solvers.py  train.py  utils.py
