[project]
name = "deeplp"
version = "0.2.1"
description = "A package that solves Linear Programs using pytorch"
authors = [
    {name = "Mohammed Alshahrani",email = "mmogib@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "deeplp", from = "src"}]

[tool.poetry.dependencies]
torch = "^2.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
